--- a/code/style.css
+++ b/code/style.css
@@ -9,6 +9,94 @@
 Body{
     height:100vh;
     width:100vw;
-    display: flex;
+    
 }
 
+.main{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+#Items{
+    Height:100px ;
+    width: 500px ;
+    display: flex;
+    position: relative;
+}
+
+#drumKitLayout{
+    width: fit-content;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(10, 125px);
+    grid-template-rows: repeat(5, 125px);
+}
+
+#High-Hat{
+    position: absolute;
+    left: 20px;
+    background-color: #f1f1f1;
+    border: 1px solid  #d3d3d3;
+    text-align: center;
+}
+
+#Snare{
+    position: absolute;
+    left: 100px;
+    background-color: #f1f1f1;
+    border: 1px solid #d3d3d3;
+    text-align: center;
+}
+
+#Kick{
+    position: absolute;
+    left: 150px;
+    background-color: #f1f1f1;
+    border: 1px solid #d3d3d3;
+    text-align: center;
+}
+
+#Crash{
+    position: absolute;
+    left: 200px;
+    background-color: #f1f1f1;
+    border: 1px solid #d3d3d3;
+    text-align: center;
+}
+
+#Ride{
+    position: absolute;
+    left: 250px;
+    background-color: #f1f1f1;
+    border: 1px solid #d3d3d3;
+    text-align: center;
+}
+
+#Tom1{
+    position: absolute;
+    left: 300px;
+    background-color: #f1f1f1;
+    border: 1px solid #d3d3d3;
+    text-align: center;
+}
+
+#Tom2{
+    position: absolute;
+    left: 350px;
+    background-color: #f1f1f1;
+    border: 1px solid #d3d3d3;
+    text-align: center;
+}
+
+#Floor-Tom{
+    position: absolute;
+    left: 400px;
+    background-color: #f1f1f1;
+    border: 1px solid #d3d3d3;
+    text-align: center;
+}
