all parts added

--- a/prototype 3/style.css
+++ b/prototype 3/style.css
@@ -31,6 +31,15 @@ body{
 
 /*Insert drumparts CSS styling here*/
 
+/*placeholder styling*/
+
+#part_div{
+    background-color: grey;
+    width:100px;
+    height: 20px;
+}
+
+/**/
 .high_hat_div{
     background-color: grey;
     width:100px;
